// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`POST /optimize golden output > matches the recorded response for black-litterman 1`] = `
{
  "covariance_matrix": [
    [
      0.000778250707977,
      0.0000284749537745,
      -0.0000364910857725,
    ],
    [
      0.0000284749537745,
      0.00294014355739,
      -0.0000369570204826,
    ],
    [
      -0.0000364910857725,
      -0.0000369570204826,
      0.00988797089681,
    ],
  ],
  "expected_return": 0.119036510785,
  "sharpe_ratio": 2.90745813061,
  "stats": {
    "ci_95_high": 0.185799832016,
    "ci_95_low": 0.0522731895545,
    "prob_neg_1m": 0.156533828641,
    "prob_neg_1y": 0.00023742494489,
    "prob_neg_2y": 3.8696458754e-7,
    "prob_neg_3m": 0.0402923174585,
  },
  "strategy": "black-litterman",
  "volatility": 0.0340629189953,
  "weights": [
    {
      "exp_ret": 0.0535347306142,
      "fund_id": 0,
      "fund_name": "AAA",
      "volatility": 0.0278971451582,
      "weight": 0.503452111646,
    },
    {
      "exp_ret": 0.0701500999221,
      "fund_id": 1,
      "fund_name": "BBB",
      "volatility": 0.0542230906293,
      "weight": 0.203179423257,
    },
    {
      "exp_ret": 0.265302137167,
      "fund_id": 2,
      "fund_name": "CCC",
      "volatility": 0.0994382768194,
      "weight": 0.293368465096,
    },
  ],
}
`;

exports[`POST /optimize golden output > matches the recorded response for black-litterman with bounds, shorting and leverage 1`] = `
{
  "covariance_matrix": [
    [
      0.000778250707977,
      0.0000284749537745,
      -0.0000364910857725,
    ],
    [
      0.0000284749537745,
      0.00294014355739,
      -0.0000369570204826,
    ],
    [
      -0.0000364910857725,
      -0.0000369570204826,
      0.00988797089681,
    ],
  ],
  "expected_return": 0.179132899858,
  "sharpe_ratio": 3.10196192788,
  "stats": {
    "ci_95_high": 0.279682323408,
    "ci_95_low": 0.0785834763082,
    "prob_neg_1m": 0.156726861047,
    "prob_neg_1y": 0.000239915654119,
    "prob_neg_2y": 3.94863749476e-7,
    "prob_neg_3m": 0.0404132569487,
  },
  "strategy": "black-litterman",
  "volatility": 0.051300726301,
  "weights": [
    {
      "exp_ret": 0.0535347306142,
      "fund_id": 0,
      "fund_name": "AAA",
      "volatility": 0.0278971451582,
      "weight": 0.745122655577,
    },
    {
      "exp_ret": 0.0701500999221,
      "fund_id": 1,
      "fund_name": "BBB",
      "volatility": 0.0542230906293,
      "weight": 0.31271830117,
    },
    {
      "exp_ret": 0.265302137167,
      "fund_id": 2,
      "fund_name": "CCC",
      "volatility": 0.0994382768194,
      "weight": 0.442159043253,
    },
  ],
}
`;

exports[`POST /optimize golden output > matches the recorded response for cvar 1`] = `
{
  "covariance_matrix": [
    [
      0.000778250707977,
      0.0000284749537745,
      -0.0000364910857725,
    ],
    [
      0.0000284749537745,
      0.00294014355739,
      -0.0000369570204826,
    ],
    [
      -0.0000364910857725,
      -0.0000369570204826,
      0.00988797089681,
    ],
  ],
  "expected_return": 0.0627838694179,
  "sharpe_ratio": 1.70061995084,
  "stats": {
    "ci_95_high": 0.112093172192,
    "ci_95_low": 0.0134745666441,
    "prob_neg_1m": 0.235633710076,
    "prob_neg_1y": 0.00628719756977,
    "prob_neg_2y": 0.000208361490721,
    "prob_neg_3m": 0.106052059283,
  },
  "strategy": "cvar",
  "volatility": 0.0251578075377,
  "weights": [
    {
      "exp_ret": 0.0535347306142,
      "fund_id": 0,
      "fund_name": "AAA",
      "volatility": 0.0278971451582,
      "weight": 0.873755396971,
    },
    {
      "exp_ret": 0.0701500999221,
      "fund_id": 1,
      "fund_name": "BBB",
      "volatility": 0.0542230906293,
      "weight": 0.089598620736,
    },
    {
      "exp_ret": 0.265302137167,
      "fund_id": 2,
      "fund_name": "CCC",
      "volatility": 0.0994382768194,
      "weight": 0.0366459822926,
    },
  ],
}
`;

exports[`POST /optimize golden output > matches the recorded response for cvar with bounds, shorting and leverage 1`] = `
{
  "covariance_matrix": [
    [
      0.000778250707977,
      0.0000284749537745,
      -0.0000364910857725,
    ],
    [
      0.0000284749537745,
      0.00294014355739,
      -0.0000369570204826,
    ],
    [
      -0.0000364910857725,
      -0.0000369570204826,
      0.00988797089681,
    ],
  ],
  "expected_return": 0.122683117645,
  "sharpe_ratio": 2.55287170656,
  "stats": {
    "ci_95_high": 0.201519398398,
    "ci_95_low": 0.0438468368923,
    "prob_neg_1m": 0.189297090158,
    "prob_neg_1y": 0.00114387705298,
    "prob_neg_2y": 0.00000804038476182,
    "prob_neg_3m": 0.063623042732,
  },
  "strategy": "cvar",
  "volatility": 0.0402225922209,
  "weights": [
    {
      "exp_ret": 0.0535347306142,
      "fund_id": 0,
      "fund_name": "AAA",
      "volatility": 0.0278971451582,
      "weight": 0.8,
    },
    {
      "exp_ret": 0.0701500999221,
      "fund_id": 1,
      "fund_name": "BBB",
      "volatility": 0.0542230906293,
      "weight": 0.542429197038,
    },
    {
      "exp_ret": 0.265302137167,
      "fund_id": 2,
      "fund_name": "CCC",
      "volatility": 0.0994382768194,
      "weight": 0.157570802962,
    },
  ],
}
`;

exports[`POST /optimize golden output > matches the recorded response for equal-weight 1`] = `
{
  "covariance_matrix": [
    [
      0.000778250707977,
      0.0000284749537745,
      -0.0000364910857725,
    ],
    [
      0.0000284749537745,
      0.00294014355739,
      -0.0000369570204826,
    ],
    [
      -0.0000364910857725,
      -0.0000369570204826,
      0.00988797089681,
    ],
  ],
  "expected_return": 0.129662322568,
  "sharpe_ratio": 2.82974872962,
  "stats": {
    "ci_95_high": 0.205618943727,
    "ci_95_low": 0.0537057014082,
    "prob_neg_1m": 0.167057435534,
    "prob_neg_1y": 0.000410234649755,
    "prob_neg_2y": 0.00000111445157297,
    "prob_neg_3m": 0.047171856847,
  },
  "strategy": "equal-weight",
  "volatility": 0.0387533781427,
  "weights": [
    {
      "exp_ret": 0.0535347306142,
      "fund_id": 0,
      "fund_name": "AAA",
      "volatility": 0.0278971451582,
      "weight": 0.333333333333,
    },
    {
      "exp_ret": 0.0701500999221,
      "fund_id": 1,
      "fund_name": "BBB",
      "volatility": 0.0542230906293,
      "weight": 0.333333333333,
    },
    {
      "exp_ret": 0.265302137167,
      "fund_id": 2,
      "fund_name": "CCC",
      "volatility": 0.0994382768194,
      "weight": 0.333333333333,
    },
  ],
}
`;

exports[`POST /optimize golden output > matches the recorded response for equal-weight with bounds, shorting and leverage 1`] = `
{
  "covariance_matrix": [
    [
      0.000778250707977,
      0.0000284749537745,
      -0.0000364910857725,
    ],
    [
      0.0000284749537745,
      0.00294014355739,
      -0.0000369570204826,
    ],
    [
      -0.0000364910857725,
      -0.0000369570204826,
      0.00988797089681,
    ],
  ],
  "expected_return": 0.194493483852,
  "sharpe_ratio": 3.00177674334,
  "stats": {
    "ci_95_high": 0.308428415591,
    "ci_95_low": 0.0805585521123,
    "prob_neg_1m": 0.167057435534,
    "prob_neg_1y": 0.000410234649755,
    "prob_neg_2y": 0.00000111445157297,
    "prob_neg_3m": 0.047171856847,
  },
  "strategy": "equal-weight",
  "volatility": 0.058130067214,
  "weights": [
    {
      "exp_ret": 0.0535347306142,
      "fund_id": 0,
      "fund_name": "AAA",
      "volatility": 0.0278971451582,
      "weight": 0.5,
    },
    {
      "exp_ret": 0.0701500999221,
      "fund_id": 1,
      "fund_name": "BBB",
      "volatility": 0.0542230906293,
      "weight": 0.5,
    },
    {
      "exp_ret": 0.265302137167,
      "fund_id": 2,
      "fund_name": "CCC",
      "volatility": 0.0994382768194,
      "weight": 0.5,
    },
  ],
}
`;

exports[`POST /optimize golden output > matches the recorded response for hrp 1`] = `
{
  "covariance_matrix": [
    [
      0.000778250707977,
      0.0000284749537745,
      -0.0000364910857725,
    ],
    [
      0.0000284749537745,
      0.00294014355739,
      -0.0000369570204826,
    ],
    [
      -0.0000364910857725,
      -0.0000369570204826,
      0.00988797089681,
    ],
  ],
  "expected_return": 0.0693912724504,
  "sharpe_ratio": 2.04458393347,
  "stats": {
    "ci_95_high": 0.116739240131,
    "ci_95_low": 0.0220433047694,
    "prob_neg_1m": 0.203490350286,
    "prob_neg_1y": 0.0020362754491,
    "prob_neg_2y": 0.0000243057403047,
    "prob_neg_3m": 0.0754658696123,
  },
  "strategy": "hrp",
  "volatility": 0.0241571263678,
  "weights": [
    {
      "exp_ret": 0.0535347306142,
      "fund_id": 0,
      "fund_name": "AAA",
      "volatility": 0.0278971451582,
      "weight": 0.743709812975,
    },
    {
      "exp_ret": 0.0701500999221,
      "fund_id": 1,
      "fund_name": "BBB",
      "volatility": 0.0542230906293,
      "weight": 0.196858648967,
    },
    {
      "exp_ret": 0.265302137167,
      "fund_id": 2,
      "fund_name": "CCC",
      "volatility": 0.0994382768194,
      "weight": 0.0594315380586,
    },
  ],
}
`;

exports[`POST /optimize golden output > matches the recorded response for hrp with bounds, shorting and leverage 1`] = `
{
  "covariance_matrix": [
    [
      0.000778250707977,
      0.0000284749537745,
      -0.0000364910857725,
    ],
    [
      0.0000284749537745,
      0.00294014355739,
      -0.0000369570204826,
    ],
    [
      -0.0000364910857725,
      -0.0000369570204826,
      0.00988797089681,
    ],
  ],
  "expected_return": 0.140121681973,
  "sharpe_ratio": 2.91125694399,
  "stats": {
    "ci_95_high": 0.220993450146,
    "ci_95_low": 0.0592499137997,
    "prob_neg_1m": 0.163460759615,
    "prob_neg_1y": 0.000341974982717,
    "prob_neg_2y": 7.83974573482e-7,
    "prob_neg_3m": 0.0447550353063,
  },
  "strategy": "hrp",
  "volatility": 0.0412611062108,
  "weights": [
    {
      "exp_ret": 0.0535347306142,
      "fund_id": 0,
      "fund_name": "AAA",
      "volatility": 0.0278971451582,
      "weight": 0.8,
    },
    {
      "exp_ret": 0.0701500999221,
      "fund_id": 1,
      "fund_name": "BBB",
      "volatility": 0.0542230906293,
      "weight": 0.453070333181,
    },
    {
      "exp_ret": 0.265302137167,
      "fund_id": 2,
      "fund_name": "CCC",
      "volatility": 0.0994382768194,
      "weight": 0.246929666819,
    },
  ],
}
`;

exports[`POST /optimize golden output > matches the recorded response for knee-point 1`] = `
{
  "covariance_matrix": [
    [
      0.000778250707977,
      0.0000284749537745,
      -0.0000364910857725,
    ],
    [
      0.0000284749537745,
      0.00294014355739,
      -0.0000369570204826,
    ],
    [
      -0.0000364910857725,
      -0.0000369570204826,
      0.00988797089681,
    ],
  ],
  "expected_return": 0.20085620628,
  "sharpe_ratio": 2.62724485871,
  "stats": {
    "ci_95_high": 0.335780122158,
    "ci_95_low": 0.0659322904015,
    "prob_neg_1m": 0.199812708364,
    "prob_neg_1y": 0.00176273834365,
    "prob_neg_2y": 0.0000184376910434,
    "prob_neg_3m": 0.0722978047758,
  },
  "strategy": "knee-point",
  "volatility": 0.068838732591,
  "weights": [
    {
      "exp_ret": 0.0535347306142,
      "fund_id": 0,
      "fund_name": "AAA",
      "volatility": 0.0278971451582,
      "weight": 0.00117668889836,
    },
    {
      "exp_ret": 0.0701500999221,
      "fund_id": 1,
      "fund_name": "BBB",
      "volatility": 0.0542230906293,
      "weight": 0.328957603708,
    },
    {
      "exp_ret": 0.265302137167,
      "fund_id": 2,
      "fund_name": "CCC",
      "volatility": 0.0994382768194,
      "weight": 0.669865707393,
    },
  ],
}
`;

exports[`POST /optimize golden output > matches the recorded response for knee-point with bounds, shorting and leverage 1`] = `
{
  "covariance_matrix": [
    [
      0.000778250707977,
      0.0000284749537745,
      -0.0000364910857725,
    ],
    [
      0.0000284749537745,
      0.00294014355739,
      -0.0000369570204826,
    ],
    [
      -0.0000364910857725,
      -0.0000369570204826,
      0.00988797089681,
    ],
  ],
  "expected_return": 0.184626980814,
  "sharpe_ratio": 2.95299872977,
  "stats": {
    "ci_95_high": 0.29389518982,
    "ci_95_low": 0.0753587718094,
    "prob_neg_1m": 0.169531161319,
    "prob_neg_1y": 0.000463631096575,
    "prob_neg_2y": 0.00000141155248118,
    "prob_neg_3m": 0.0488736009783,
  },
  "strategy": "knee-point",
  "volatility": 0.0557490862271,
  "weights": [
    {
      "exp_ret": 0.0535347306142,
      "fund_id": 0,
      "fund_name": "AAA",
      "volatility": 0.0278971451582,
      "weight": 0.478821269311,
    },
    {
      "exp_ret": 0.0701500999221,
      "fund_id": 1,
      "fund_name": "BBB",
      "volatility": 0.0542230906293,
      "weight": 0.573539933849,
    },
    {
      "exp_ret": 0.265302137167,
      "fund_id": 2,
      "fund_name": "CCC",
      "volatility": 0.0994382768194,
      "weight": 0.447638796841,
    },
  ],
}
`;

exports[`POST /optimize golden output > matches the recorded response for max-diversification 1`] = `
{
  "covariance_matrix": [
    [
      0.000778250707977,
      0.0000284749537745,
      -0.0000364910857725,
    ],
    [
      0.0000284749537745,
      0.00294014355739,
      -0.0000369570204826,
    ],
    [
      -0.0000364910857725,
      -0.0000369570204826,
      0.00988797089681,
    ],
  ],
  "expected_return": 0.0921172089833,
  "sharpe_ratio": 2.66937161837,
  "stats": {
    "ci_95_high": 0.145069644918,
    "ci_95_low": 0.0391647730488,
    "prob_neg_1m": 0.162488034209,
    "prob_neg_1y": 0.000325272086955,
    "prob_neg_2y": 7.11620807281e-7,
    "prob_neg_3m": 0.0441131010089,
  },
  "strategy": "max-diversification",
  "volatility": 0.0270165489462,
  "weights": [
    {
      "exp_ret": 0.0535347306142,
      "fund_id": 0,
      "fund_name": "AAA",
      "volatility": 0.0278971451582,
      "weight": 0.555953182775,
    },
    {
      "exp_ret": 0.0701500999221,
      "fund_id": 1,
      "fund_name": "BBB",
      "volatility": 0.0542230906293,
      "weight": 0.284148529964,
    },
    {
      "exp_ret": 0.265302137167,
      "fund_id": 2,
      "fund_name": "CCC",
      "volatility": 0.0994382768194,
      "weight": 0.159898287261,
    },
  ],
}
`;

exports[`POST /optimize golden output > matches the recorded response for max-diversification with bounds, shorting and leverage 1`] = `
{
  "covariance_matrix": [
    [
      0.000778250707977,
      0.0000284749537745,
      -0.0000364910857725,
    ],
    [
      0.0000284749537745,
      0.00294014355739,
      -0.0000369570204826,
    ],
    [
      -0.0000364910857725,
      -0.0000369570204826,
      0.00988797089681,
    ],
  ],
  "expected_return": 0.140561595095,
  "sharpe_ratio": 2.91780897552,
  "stats": {
    "ci_95_high": 0.22154726906,
    "ci_95_low": 0.0595759211289,
    "prob_neg_1m": 0.163043000041,
    "prob_neg_1y": 0.000334714131545,
    "prob_neg_2y": 7.52108308189e-7,
    "prob_neg_3m": 0.0444787313515,
  },
  "strategy": "max-diversification",
  "volatility": 0.0413192214111,
  "weights": [
    {
      "exp_ret": 0.0535347306142,
      "fund_id": 0,
      "fund_name": "AAA",
      "volatility": 0.0278971451582,
      "weight": 0.8,
    },
    {
      "exp_ret": 0.0701500999221,
      "fund_id": 1,
      "fund_name": "BBB",
      "volatility": 0.0542230906293,
      "weight": 0.450816126009,
    },
    {
      "exp_ret": 0.265302137167,
      "fund_id": 2,
      "fund_name": "CCC",
      "volatility": 0.0994382768194,
      "weight": 0.24918387399,
    },
  ],
}
`;

exports[`POST /optimize golden output > matches the recorded response for max-return 1`] = `
{
  "covariance_matrix": [
    [
      0.000778250707977,
      0.0000284749537745,
      -0.0000364910857725,
    ],
    [
      0.0000284749537745,
      0.00294014355739,
      -0.0000369570204826,
    ],
    [
      -0.0000364910857725,
      -0.0000369570204826,
      0.00988797089681,
    ],
  ],
  "expected_return": 0.265302137167,
  "sharpe_ratio": 2.46687839948,
  "stats": {
    "ci_95_high": 0.460201159733,
    "ci_95_low": 0.0704031146013,
    "prob_neg_1m": 0.220594236604,
    "prob_neg_1y": 0.00381516479401,
    "prob_neg_2y": 0.0000806309621781,
    "prob_neg_3m": 0.0911013220363,
  },
  "strategy": "max-return",
  "volatility": 0.0994382768194,
  "weights": [
    {
      "exp_ret": 0.0535347306142,
      "fund_id": 0,
      "fund_name": "AAA",
      "volatility": 0.0278971451582,
      "weight": 0,
    },
    {
      "exp_ret": 0.0701500999221,
      "fund_id": 1,
      "fund_name": "BBB",
      "volatility": 0.0542230906293,
      "weight": 0,
    },
    {
      "exp_ret": 0.265302137167,
      "fund_id": 2,
      "fund_name": "CCC",
      "volatility": 0.0994382768194,
      "weight": 1,
    },
  ],
}
`;

exports[`POST /optimize golden output > matches the recorded response for max-return with bounds, shorting and leverage 1`] = `
{
  "covariance_matrix": [
    [
      0.000778250707977,
      0.0000284749537745,
      -0.0000364910857725,
    ],
    [
      0.0000284749537745,
      0.00294014355739,
      -0.0000369570204826,
    ],
    [
      -0.0000364910857725,
      -0.0000369570204826,
      0.00988797089681,
    ],
  ],
  "expected_return": 0.259685242748,
  "sharpe_ratio": 2.79448436417,
  "stats": {
    "ci_95_high": 0.427796069136,
    "ci_95_low": 0.0915744163612,
    "prob_neg_1m": 0.191056017861,
    "prob_neg_1y": 0.00123232947927,
    "prob_neg_2y": 0.00000927738840095,
    "prob_neg_3m": 0.0650342608826,
  },
  "strategy": "max-return",
  "volatility": 0.0857708297894,
  "weights": [
    {
      "exp_ret": 0.0535347306142,
      "fund_id": 0,
      "fund_name": "AAA",
      "volatility": 0.0278971451582,
      "weight": 0.1,
    },
    {
      "exp_ret": 0.0701500999221,
      "fund_id": 1,
      "fund_name": "BBB",
      "volatility": 0.0542230906293,
      "weight": 0.6,
    },
    {
      "exp_ret": 0.265302137167,
      "fund_id": 2,
      "fund_name": "CCC",
      "volatility": 0.0994382768194,
      "weight": 0.8,
    },
  ],
}
`;

exports[`POST /optimize golden output > matches the recorded response for max-sharpe 1`] = `
{
  "covariance_matrix": [
    [
      0.000778250707977,
      0.0000284749537745,
      -0.0000364910857725,
    ],
    [
      0.0000284749537745,
      0.00294014355739,
      -0.0000369570204826,
    ],
    [
      -0.0000364910857725,
      -0.0000369570204826,
      0.00988797089681,
    ],
  ],
  "expected_return": 0.120174892743,
  "sharpe_ratio": 2.77545403326,
  "stats": {
    "ci_95_high": 0.190917476631,
    "ci_95_low": 0.0494323088545,
    "prob_neg_1m": 0.168234419517,
    "prob_neg_1y": 0.000434948523935,
    "prob_neg_2y": 0.00000124777698957,
    "prob_neg_3m": 0.0479775236573,
  },
  "strategy": "max-sharpe",
  "volatility": 0.036093155045,
  "weights": [
    {
      "exp_ret": 0.0535347306142,
      "fund_id": 0,
      "fund_name": "AAA",
      "volatility": 0.0278971451582,
      "weight": 0.337926739079,
    },
    {
      "exp_ret": 0.0701500999221,
      "fund_id": 1,
      "fund_name": "BBB",
      "volatility": 0.0542230906293,
      "weight": 0.376964423858,
    },
    {
      "exp_ret": 0.265302137167,
      "fund_id": 2,
      "fund_name": "CCC",
      "volatility": 0.0994382768194,
      "weight": 0.285108837063,
    },
  ],
}
`;

exports[`POST /optimize golden output > matches the recorded response for max-sharpe with bounds, shorting and leverage 1`] = `
{
  "covariance_matrix": [
    [
      0.000778250707977,
      0.0000284749537745,
      -0.0000364910857725,
    ],
    [
      0.0000284749537745,
      0.00294014355739,
      -0.0000369570204826,
    ],
    [
      -0.0000364910857725,
      -0.0000369570204826,
      0.00988797089681,
    ],
  ],
  "expected_return": 0.171703015324,
  "sharpe_ratio": 2.96033925336,
  "stats": {
    "ci_95_high": 0.272143500211,
    "ci_95_low": 0.071262530438,
    "prob_neg_1m": 0.166711853319,
    "prob_neg_1y": 0.00040320918771,
    "prob_neg_2y": 0.00000107787223907,
    "prob_neg_3m": 0.0469366834163,
  },
  "strategy": "max-sharpe",
  "volatility": 0.0512451453502,
  "weights": [
    {
      "exp_ret": 0.0535347306142,
      "fund_id": 0,
      "fund_name": "AAA",
      "volatility": 0.0278971451582,
      "weight": 0.554945869901,
    },
    {
      "exp_ret": 0.0701500999221,
      "fund_id": 1,
      "fund_name": "BBB",
      "volatility": 0.0542230906293,
      "weight": 0.557159147887,
    },
    {
      "exp_ret": 0.265302137167,
      "fund_id": 2,
      "fund_name": "CCC",
      "volatility": 0.0994382768194,
      "weight": 0.387894982211,
    },
  ],
}
`;

exports[`POST /optimize golden output > matches the recorded response for min-risk 1`] = `
{
  "covariance_matrix": [
    [
      0.000778250707977,
      0.0000284749537745,
      -0.0000364910857725,
    ],
    [
      0.0000284749537745,
      0.00294014355739,
      -0.0000369570204826,
    ],
    [
      -0.0000364910857725,
      -0.0000369570204826,
      0.00988797089681,
    ],
  ],
  "expected_return": 0.0981933778753,
  "sharpe_ratio": 2.64543607767,
  "stats": {
    "ci_95_high": 0.156126745432,
    "ci_95_low": 0.0402600103186,
    "prob_neg_1m": 0.168779217657,
    "prob_neg_1y": 0.000446809549973,
    "prob_neg_2y": 0.0000013143277065,
    "prob_neg_3m": 0.0483529143446,
  },
  "strategy": "min-risk",
  "volatility": 0.0295578405901,
  "weights": [
    {
      "exp_ret": 0.0535347306142,
      "fund_id": 0,
      "fund_name": "AAA",
      "volatility": 0.0278971451582,
      "weight": 0.456144314,
    },
    {
      "exp_ret": 0.0701500999221,
      "fund_id": 1,
      "fund_name": "BBB",
      "volatility": 0.0542230906293,
      "weight": 0.361319624934,
    },
    {
      "exp_ret": 0.265302137167,
      "fund_id": 2,
      "fund_name": "CCC",
      "volatility": 0.0994382768194,
      "weight": 0.182536061067,
    },
  ],
}
`;

exports[`POST /optimize golden output > matches the recorded response for min-risk with bounds, shorting and leverage 1`] = `
{
  "covariance_matrix": [
    [
      0.000778250707977,
      0.0000284749537745,
      -0.0000364910857725,
    ],
    [
      0.0000284749537745,
      0.00294014355739,
      -0.0000369570204826,
    ],
    [
      -0.0000364910857725,
      -0.0000369570204826,
      0.00988797089681,
    ],
  ],
  "expected_return": 0.147290066813,
  "sharpe_ratio": 2.87098254973,
  "stats": {
    "ci_95_high": 0.234190118147,
    "ci_95_low": 0.0603900154778,
    "prob_neg_1m": 0.168779217657,
    "prob_neg_1y": 0.000446809549974,
    "prob_neg_2y": 0.0000013143277065,
    "prob_neg_3m": 0.0483529143446,
  },
  "strategy": "min-risk",
  "volatility": 0.0443367608851,
  "weights": [
    {
      "exp_ret": 0.0535347306142,
      "fund_id": 0,
      "fund_name": "AAA",
      "volatility": 0.0278971451582,
      "weight": 0.684216471,
    },
    {
      "exp_ret": 0.0701500999221,
      "fund_id": 1,
      "fund_name": "BBB",
      "volatility": 0.0542230906293,
      "weight": 0.5419794374,
    },
    {
      "exp_ret": 0.265302137167,
      "fund_id": 2,
      "fund_name": "CCC",
      "volatility": 0.0994382768194,
      "weight": 0.2738040916,
    },
  ],
}
`;

exports[`POST /optimize golden output > matches the recorded response for risk-parity 1`] = `
{
  "covariance_matrix": [
    [
      0.000778250707977,
      0.0000284749537745,
      -0.0000364910857725,
    ],
    [
      0.0000284749537745,
      0.00294014355739,
      -0.0000369570204826,
    ],
    [
      -0.0000364910857725,
      -0.0000369570204826,
      0.00988797089681,
    ],
  ],
  "expected_return": 0.0591791538804,
  "sharpe_ratio": 1.49003532079,
  "stats": {
    "ci_95_high": 0.110715611127,
    "ci_95_low": 0.00764269663391,
    "prob_neg_1m": 0.257939676897,
    "prob_neg_1y": 0.0122034406797,
    "prob_neg_2y": 0.000729062996103,
    "prob_neg_3m": 0.130224458948,
  },
  "strategy": "risk-parity",
  "volatility": 0.02629411084,
  "weights": [
    {
      "exp_ret": 0.0535347306142,
      "fund_id": 0,
      "fund_name": "AAA",
      "volatility": 0.0278971451582,
      "weight": 0.660289027489,
    },
    {
      "exp_ret": 0.0701500999221,
      "fund_id": 1,
      "fund_name": "BBB",
      "volatility": 0.0542230906293,
      "weight": 0.339710972511,
    },
    {
      "exp_ret": 0.265302137167,
      "fund_id": 2,
      "fund_name": "CCC",
      "volatility": 0.0994382768194,
      "weight": 0,
    },
  ],
}
`;

exports[`POST /optimize golden output > matches the recorded response for risk-parity with bounds, shorting and leverage 1`] = `
{
  "covariance_matrix": [
    [
      0.000778250707977,
      0.0000284749537745,
      -0.0000364910857725,
    ],
    [
      0.0000284749537745,
      0.00294014355739,
      -0.0000369570204826,
    ],
    [
      -0.0000364910857725,
      -0.0000369570204826,
      0.00988797089681,
    ],
  ],
  "expected_return": 0.111448058161,
  "sharpe_ratio": 2.23611817133,
  "stats": {
    "ci_95_high": 0.191604016059,
    "ci_95_low": 0.0312921002632,
    "prob_neg_1m": 0.215732403981,
    "prob_neg_1y": 0.00321352265903,
    "prob_neg_2y": 0.0000581315825345,
    "prob_neg_3m": 0.0865071415328,
  },
  "strategy": "risk-parity",
  "volatility": 0.0408958968868,
  "weights": [
    {
      "exp_ret": 0.0535347306142,
      "fund_id": 0,
      "fund_name": "AAA",
      "volatility": 0.0278971451582,
      "weight": 0.8,
    },
    {
      "exp_ret": 0.0701500999221,
      "fund_id": 1,
      "fund_name": "BBB",
      "volatility": 0.0542230906293,
      "weight": 0.6,
    },
    {
      "exp_ret": 0.265302137167,
      "fund_id": 2,
      "fund_name": "CCC",
      "volatility": 0.0994382768194,
      "weight": 0.0999999999999,
    },
  ],
}
`;

exports[`POST /optimize golden output > matches the recorded response for target-return 1`] = `
{
  "covariance_matrix": [
    [
      0.000778250707977,
      0.0000284749537745,
      -0.0000364910857725,
    ],
    [
      0.0000284749537745,
      0.00294014355739,
      -0.0000369570204826,
    ],
    [
      -0.0000364910857725,
      -0.0000369570204826,
      0.00988797089681,
    ],
  ],
  "expected_return": 0.100154539238,
  "sharpe_ratio": 2.67000381762,
  "stats": {
    "ci_95_high": 0.158994491402,
    "ci_95_low": 0.0413145870741,
    "prob_neg_1m": 0.167752899391,
    "prob_neg_1y": 0.000424689000326,
    "prob_neg_2y": 0.00000119155181849,
    "prob_neg_3m": 0.0476470337758,
  },
  "strategy": "target-return",
  "volatility": 0.0300203837571,
  "weights": [
    {
      "exp_ret": 0.0535347306142,
      "fund_id": 0,
      "fund_name": "AAA",
      "volatility": 0.0278971451582,
      "weight": 0.446572289893,
    },
    {
      "exp_ret": 0.0701500999221,
      "fund_id": 1,
      "fund_name": "BBB",
      "volatility": 0.0542230906293,
      "weight": 0.361657214838,
    },
    {
      "exp_ret": 0.265302137167,
      "fund_id": 2,
      "fund_name": "CCC",
      "volatility": 0.0994382768194,
      "weight": 0.191770495269,
    },
  ],
}
`;

exports[`POST /optimize golden output > matches the recorded response for target-return with bounds, shorting and leverage 1`] = `
{
  "covariance_matrix": [
    [
      0.000778250707977,
      0.0000284749537745,
      -0.0000364910857725,
    ],
    [
      0.0000284749537745,
      0.00294014355739,
      -0.0000369570204826,
    ],
    [
      -0.0000364910857725,
      -0.0000369570204826,
      0.00988797089681,
    ],
  ],
  "expected_return": 0.147290066813,
  "sharpe_ratio": 2.87098254973,
  "stats": {
    "ci_95_high": 0.234190118147,
    "ci_95_low": 0.0603900154778,
    "prob_neg_1m": 0.168779217657,
    "prob_neg_1y": 0.000446809549974,
    "prob_neg_2y": 0.0000013143277065,
    "prob_neg_3m": 0.0483529143446,
  },
  "strategy": "target-return",
  "volatility": 0.0443367608851,
  "weights": [
    {
      "exp_ret": 0.0535347306142,
      "fund_id": 0,
      "fund_name": "AAA",
      "volatility": 0.0278971451582,
      "weight": 0.684216471,
    },
    {
      "exp_ret": 0.0701500999221,
      "fund_id": 1,
      "fund_name": "BBB",
      "volatility": 0.0542230906293,
      "weight": 0.5419794374,
    },
    {
      "exp_ret": 0.265302137167,
      "fund_id": 2,
      "fund_name": "CCC",
      "volatility": 0.0994382768194,
      "weight": 0.2738040916,
    },
  ],
}
`;

exports[`POST /optimize golden output > matches the recorded response for target-risk 1`] = `
{
  "covariance_matrix": [
    [
      0.000778250707977,
      0.0000284749537745,
      -0.0000364910857725,
    ],
    [
      0.0000284749537745,
      0.00294014355739,
      -0.0000369570204826,
    ],
    [
      -0.0000364910857725,
      -0.0000369570204826,
      0.00988797089681,
    ],
  ],
  "expected_return": 0.265302137167,
  "sharpe_ratio": 2.46687839948,
  "stats": {
    "ci_95_high": 0.460201159733,
    "ci_95_low": 0.0704031146012,
    "prob_neg_1m": 0.220594236604,
    "prob_neg_1y": 0.00381516479401,
    "prob_neg_2y": 0.0000806309621781,
    "prob_neg_3m": 0.0911013220363,
  },
  "strategy": "target-risk",
  "volatility": 0.0994382768194,
  "weights": [
    {
      "exp_ret": 0.0535347306142,
      "fund_id": 0,
      "fund_name": "AAA",
      "volatility": 0.0278971451582,
      "weight": 0,
    },
    {
      "exp_ret": 0.0701500999221,
      "fund_id": 1,
      "fund_name": "BBB",
      "volatility": 0.0542230906293,
      "weight": 0,
    },
    {
      "exp_ret": 0.265302137167,
      "fund_id": 2,
      "fund_name": "CCC",
      "volatility": 0.0994382768194,
      "weight": 1,
    },
  ],
}
`;

exports[`POST /optimize golden output > matches the recorded response for target-risk with bounds, shorting and leverage 1`] = `
{
  "covariance_matrix": [
    [
      0.000778250707977,
      0.0000284749537745,
      -0.0000364910857725,
    ],
    [
      0.0000284749537745,
      0.00294014355739,
      -0.0000369570204826,
    ],
    [
      -0.0000364910857725,
      -0.0000369570204826,
      0.00988797089681,
    ],
  ],
  "expected_return": 0.259685242749,
  "sharpe_ratio": 2.79448436417,
  "stats": {
    "ci_95_high": 0.427796069136,
    "ci_95_low": 0.0915744163612,
    "prob_neg_1m": 0.191056017861,
    "prob_neg_1y": 0.00123232947927,
    "prob_neg_2y": 0.00000927738840095,
    "prob_neg_3m": 0.0650342608825,
  },
  "strategy": "target-risk",
  "volatility": 0.0857708297894,
  "weights": [
    {
      "exp_ret": 0.0535347306142,
      "fund_id": 0,
      "fund_name": "AAA",
      "volatility": 0.0278971451582,
      "weight": 0.1,
    },
    {
      "exp_ret": 0.0701500999221,
      "fund_id": 1,
      "fund_name": "BBB",
      "volatility": 0.0542230906293,
      "weight": 0.6,
    },
    {
      "exp_ret": 0.265302137167,
      "fund_id": 2,
      "fund_name": "CCC",
      "volatility": 0.0994382768194,
      "weight": 0.8,
    },
  ],
}
`;
